test/corpus/equation_declaration
==================
Equation declaration
==================


theory EquationDeclaration
begin

equations: 	id(a)=a

end

---

(source_file
  (security_protocol_theory
    (ident)
		(body
          (equations
            (equation
              (term
                (app
                  (ident)
                          (term
                            (literal
                              (nonnode_var
                                (msg_var
                                  (ident)))))))
              (term
                (literal
                  (nonnode_var
                    (msg_var
                  (ident))))))))
      ))
