test/corpus/simple_rule
==================
Simple rule
==================


theory ComplexEquationDeclaration
begin

rule MyRule:
	[A(x)] --> [B(x)]

end

---

(source_file
  (security_protocol_theory
    (ident)
      (body
        (rule
          (simple_rule
              (ident)
              (facts
                (fact
                  (ident)
                  (term
                    (literal
                      (nonnode_var
                        (msg_var
                          (ident)))))))
              (facts
                (fact
                  (ident)
                  (term
                    (literal
                      (nonnode_var
                        (msg_var
                          (ident))))))))))))
