test/corpus/simple_rule_with_action_indent
==================
Simple rule with action facts and indentation
==================


theory ComplexEquationDeclaration
begin

rule MyRule:
	[
		A(x)
	]
	--[
		MyAction(x)
	]->
	[
		B(x)
	]

end

---

(source_file
  (security_protocol_theory
    (ident)
      (body
        (rule
          (simple_rule
              (ident)
              (facts
                (fact
                  (ident)
                  (term
                    (literal
                      (nonnode_var
                        (msg_var
                          (ident)))))))
              (facts
                (fact
                  (ident)
                  (term
                    (literal
                      (nonnode_var
                        (msg_var
                          (ident)))))))
              (facts
                (fact
                  (ident)
                  (term
                    (literal
                      (nonnode_var
                        (msg_var
                          (ident))))))))))))
